fixed navbar + scrollbar

--- a/src/components/myNav.css
+++ b/src/components/myNav.css
@@ -1,18 +1,21 @@
-.myNavbar{
-    padding: 3vh;
+.myNavbar {
+
+    padding: 2vh 0 2vh 0;
     position: fixed;
-    top: 0;
     right: 0;
     left: 0;
-    z-index: 1030;
+    z-index: 100;
+
 }
 
-.container{
-    max-width: 175vh;
-}
+.container { max-width: 95vw; }
 
-.navItem{
+.navItem {
+
     margin-left: 2vh;
-    text-align: right;
+    margin-right: 2vh;
+    font-size: 2vh;
+    text-align: center;
+    font-family: var(--barlow);
     
 }
